<resources>
    <string name="app_name">Licencia de conducir Berazategui</string>
    <string name="xswd">Todo lo que Debo Saber para el Sacar el Registro de Conducir\n\nPara poder solicitarlo, tenés que sacar un turno en la dependencia más cercana y presentarte con la documentación correspondiente para realizar los exámenes establecidos. La edad reglamentaria para poder sacar el registro es 16 años para motocicletas y a partir de los 17 años para la licencia tipo A, es decir automóvil y camioneta.
        Como instancia principal, cabe aclarar que debes llevar el documento de identidad que confirma el domicilio en el cual residís junto con su fotocopia, de las hojas en las que se encuentran los datos principales, incluyendo el cambio de domicilio, aunque no esté realizado, se presenta la hoja en blanco. Aclarando que no se permite el DNI de los 8 años, sino que debe estar actualizado.\n\n¿Qué día me toca rendir?\nLas instancias de exámenes son dos: uno práctico y uno teórico. El día designado para los mismos es elegido por vos en el momento de sacar el turno. Existen tres formas de hacerlo:\n1_Por teléfono\n2_Mediante internet\n3_Presentándote en la dependencia que te corresponde por el domicilio\nEs importante que seas puntual en el día y el horario, sino se rechazará la solicitud. Debes tener en cuenta además, que los trámites y la obtención del registro tienen un costo que será informado en el momento de la recepción del turno.\n\nExamen Teórico\n\nLa teoría es lo primero que se rinde. El examen está compuesto de treinta preguntas, y la forma de responderla es mediante opciones múltiples. Las preguntas son designadas al azar por el sistema de licencias y se basan en la información que debes conocer como conductor, dependiendo de la clase que se elija de registro. El tiempo de resolución no puede superar los 45 minutos y actualmente, en la mayoría de los casos se utiliza un sistema computarizado. Incluyendo pantallas táctiles para los posibles conductores que no están acostumbrados a utilizar computadoras.Dentro del contenido común que se utiliza y al cual hay que prestarle especial atención es a la reglamentación de conducción, las acciones frecuentes y a las señales de tránsito. De igual forma, si te acercas a la dependencia que te corresponde o ingresas a la página de internet podes obtener toda la información necesaria para rendir de forma exitosa\nEl contenido tomado en cuenta es:\n-Ley Nacional de Tránsito N° 24.449\n-Ley 2.148.\n-Decreto 779-95.\n-Decreto 588 del año 2010\n-Código de Tránsito y Código de Falta, ambos de la resolución G.C.A.B.A\nDebemos aclara que tanto la ley como el decreto 779 tienen vigencia nacional, y los códigos G.C.A.B.A, son de carácter local, estableciendo las normas de la zona que deben conocerse y respetarse.
    En la continuación del estudio de las leyes, notarás que puede haber reglas que se contradigan, en el caso de que esto suceda, se deben tomar en cuenta como válidas las aclaraciones de la Ley 2.148. Y en la situación de que ésta no tome en cuenta algunas cuestiones, debe utilizarse como base de estudio la Ley 24.449\n\nContenido Teórico para registros de conducir profesionales\n\nSi tenés que solicitar la otorgación de un registro profesional, como sea manejo de camiones, etc. Además del material mencionado anteriormente, debes incluir:\n-Ley 451: Libro número 1.\n-Ley 451: Libro número 2. Sección número 6 del capítulo 1. En este se presentan las conductas y acciones que conllevan a una sanción inmediata.\nEn el caso de que tengas que adquirir la licencia de conducir para transporte de pasajeros, tanto las categorías D1 y D2, debes tener conocimiento además de las calles y avenidas; y todos los servicios públicos, puntos turísticos y de información. Por ejemplo: museos, cines, teatros, shopping, terminales de autobús, aeropuertos, y demás.\nPara poder pasar a la parte práctica del examen, debes aprobar de forma óptima el teórico. En el caso de que repruebes este último, tienes dos oportunidades más de rendirlo, pero tenes que presentarte no más de 5 días hábiles después de reprobar, sino, esta oportunidad caduca.\nSi repruebas los tres intento, tenes que esperar a que termine la vigencia de la solicitud y comenzar todos los trámites nuevamente.\n\nExamen Práctico\n\nDesde luego, el examen práctico es la instancia con mayor importancia, ya que demostrará cuán buen contuctor sos. Se rinde luego del teórico y debe ser aprobado sin excepciones. Las características de conducción suelen ser variables de acuerdo al tipo de vehículo para el cual sacarás el registro. Veamos algunos puntos básicos:\n-Zigzag: Es común que el instructor te indique que debes hacer zigzag entre conos, recuerda ir a una velocidad reducida y permitida. En la mayoría de los establecimientos para rendir, al finalizar hay una curva que devuelve al zigzag para hacerlo nuevamente.\n-Aceleración: Cuando te indican una situación normal, debes prestar suma atención a las señalizaciones de tránsito. La velocidad está indicada, al igual que encontrarás un cartel de “pare” y un semáforo.\n-Marcha atrás: Una de las partes del examen práctico es circular por un trayecto macha atrás, debiendo utilizar todos los espejos correspondientes y sin chocar con las vallas.\n-Estacionamiento: Estacionar, es una de las etapas más temidas por los postulantes y que se encuadran dentro de las cosas más importantes de “todo lo que debo saber para el sacar el registro de conducir”. Debes estacionar, sin tocar el cordón ni las vallas, en tres maniobras y a 20 centímetros del cordón. Al ser minucioso, es importante que lo practiques antes de concurrir al examen.\n\nAdvertencias\n\nMuchas veces, las personas llegan manejando el vehículo con el que van a rendir (también puede alquilarse o ir con la escuela de manejo), sin embargo es un gran error. Para ingresar a rendir, debes estar acompañado del conductor del vehículo y que éste tenga registro. Si le mencionas instructor que vos estás solo con el automóvil, desaprobarás automáticamente.</string>
    <string name="klipo">Normas de Tránsito\n\n
        1.Velocidad máxima adecuada y velocidad mínima adecuada.\n
        2.No zigzagear.\n
        3.No adelantarse por la derecha.\n
        4.Dar paso a vehículos policiales, ambulancias y bomberos.\n
        5.No violar la luz roja\n
        6.Respetar las señales de tránsito.\n
        7.No consumir alcohol(0.5 gramos por litro de sangre, es el máximo nivel de alcoholemia permitido por Ley)\n
        8.Usar cinturón de seguridad.\n
        9.Mantener distancia con relación al vehículo que le antecede\n
        10.Conducir con precaución\n
        11.Mirar siempre el espejo retrovisor ante cualquier maniobra.\n
        12.Los menores deben ocupar el asiento trasero.\n
        13.Manejar velocidad moderaeda sobre el pavimento mojado y no adelantarse bajo lluvia.\n
        14.Antes de ultilizar el vehículo verificar su buen funcionamiento y estado.\n
        15.Proceder con precaución en caso de accidente, absteniéndose de realizar tareas que se ignoren.\n\n
        Señales de Tránsito\n\n

    </string>
    <string name="vjfko">Distancias necesarias para frenar de acuerdo a la velocidad del vehículo.\n\n</string>
    <string name="dvag">Semáforos\n\n
        Significado de las luces del semáforo y su equivalencia con la señal manual del Agente de Tránsito</string>
    <string name="hasg">Marcas en el Pavimento\n\n
    -Linea longitudinal discontinua\n
    Separa carriles de igual sentido de circulación.Puede transportase únicamente para adelantarse a otro vehículo, o para seleccionar el carril de giro</string>
    <string name="hig">-Linea longitudinal continua\n
    Delimita el carril; no debe ser traspuesta.</string>
    <string name="jo">-Lineas longitudinales dobles\n
    Dividen las corrientes circulatorias y determinan el límite externo izquierdo del sentido de circulación de tránsito.No deben transportarse ni circular sobre las mismas.</string>
    <string name="ji">-Senda peatonal\n
    Pueden ser bastones transversales a la calzada o doble línea paralela.Indican la zona de cruce que está reservada para los peatones.</string>
    <string name="jaa">-Flechas de guía\n
    Establecen el sentido de circulación y anticipan los giros permitidos en la siguiente encrucijada.</string>
    <string name="gjhgdas">No hay caminos prohibidos,los unicos caminos prohibidos , son los caminos que se dirijen hacia fabricas privadas, que se necesitan de identificacion para acceder a ellas como estan en los barrios privados que tambien requieren de identificacion, no cualquiera puede acceder y lo ultimo las personas suelen llamar caminos prohibidos a los barrios en donde se corre peligro; donde se encuentran las villas y lugar donde abunda en hurtos y robos a mano armada. Como las personas los identifican como camios prohibidos donde no debe cruzarse ni circular en ese ambito</string>
</resources>
